=======
CHANGES
=======
1.7 (unreleased)
----------------

1.6 (2009-07-23)
----------------
* update Products.PloneGetPaid [larubbio]
* update getpaid.authorizedotnet [larubbio]
* update getpaid.SalesforcePloneFormGenAdapter [larubbio]
* add getpaid.SalesforceOrderRecorder [larubbio]
* update getpaid.payflowpro [larubbio]
* update getpaid.formgen [larubbio]
* update simplejson to 2.0.9 [larubbio]

1.5 (2009-07-10)
----------------
* update Products.PloneGetPaid [larubbio]

1.4.9 (2009-07-07)
------------------
* update Products.PloneGetPaid [larubbio]
* update getpaid.formgen [larubbio]
* update getpaid.SalesforcePloneFormGenAdapter [larubbio]
* update getpaid.core

1.4.8 (2009-07-07)
------------------
* update Products.PloneGetPaid [larubbio]
* update getpaid.formgen [larubbio]
* update getpaid.SalesforcePloneFormGenAdapter [larubbio]

1.4.7 (2009-05-27)
------------------
* update getpaid.formgen [larubbio]

1.4.6 (2009-05-26)
------------------
* Update getpaid.discount to resolve bug in 1.4.4 recipe [larubbio]

1.4.5 (2009-05-24)
------------------
* Update getpaid.discount [larubbio]

1.4.4 (2009-05-19)
------------------
* Update getpaid.formgen again to fix missing form fields [larubbio]
* Update Products.PloneGetPaid to shorten a translation [larubbio]

1.4.3 (2009-05-19)
------------------
* updated getpaid.formgen to 0.2.2 to include fix for zodb mount point bug [larubbio]

1.4.2 (2009-05-15)
------------------
* added getpaid.SalesforcePloneFormGenAdapter [larubbio]
* updated Products.PloneGetPaid, getpaid.core, getpaid.discount and 
  getpaid.formgen [larubbio]
* updated getpaid.paypal [lucielejard]

1.4.1 (2009-03-13)
------------------

* added getpaid.ogone, getpaid.formgen, getpaid.clickandbuy
* updated getpaid.authorizedotnet, getpaid.core, getpaid.paypal
  and Products.PloneGetPaid [lucielejard]


1.4 (2009-01-28)
----------------

* update the version for Products.PloneGetPaid, getpaid.warehouse and
  getpaid.discount
* added getpaid.payflowpro